Fixed issue with backface-visibility in Safari, moved jsx stored in variables to functions

--- a/src/styles.css
+++ b/src/styles.css
@@ -625,8 +625,11 @@ li {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  -webkit-perspective: 0;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  visibility: visible;
   text-align: center;
   align-content: center;
   align-items: center;
